--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    <head>
       <title>AL-WALI IT INSTITUTE</title>
-      <link rel="icon" type="image/x-icon" href=/img/logo.png">
+      <link rel="icon" type="image/x-icon" href=https://scontent.fdac96-2.fna.fbcdn.net/v/t39.30808-6/294617620_492107332721629_1797177065781805731_n.png?_nc_cat=100&ccb=1-7&_nc_sid=5f2048&_nc_ohc=S4CZqqK_dWsQ7kNvgEAGl8r&_nc_zt=23&_nc_ht=scontent.fdac96-2.fna&oh=00_AfC2LCx6-Fq_9ETSh_Rfy42jZJ7v1A_8OZ2Ux-nE5vQCjQ&oe=663BC717">
    </head>
 
    <body alink = "#DA19DA" link = "#DA19DA" vlink = "#DA19DA">
