--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    <head>
       <title>AL-WALI IT INSTITUTE</title>
-      <link rel="icon" type="image/x-icon" href=https://saziddeveloper.github.io/MY-FRIST-HTML-TEMPLATE/img/logo.png">
+      <link rel="icon" type="image/x-icon" href="https://saziddeveloper.github.io/MY-FRIST-HTML-TEMPLATE/img/logo.png">
    </head>
 
    <body alink = "#DA19DA" link = "#DA19DA" vlink = "#DA19DA">
