--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="em">
 
    <head>
+       <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="description" content="SMALL HTML PROJECT">
+      <meta name="keywords" content="HTML,HTML-5,Ashaduzzaman,Sazid,Ashaduzzaman (Sazid)">
+      <meta name="author" content="Ashaduzzaman Sazid">
       <title>AL-WALI IT INSTITUTE</title>
       <link rel="icon" type="image/x-icon" href="https://saziddeveloper.github.io/MY-FRIST-HTML-TEMPLATE/img/logo.png">
    </head>
-
    <body alink = "#DA19DA" link = "#DA19DA" vlink = "#DA19DA">
       <div style="width:100%">
          <img src = "img/bg.jpg" alt = "AL-WALI IT INSTITUTE" width="1334" height="160" />
