--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="description" content="SMALL HTML PROJECT">
-      <meta name="keywords" content="HTML,HTML-5,Ashaduzzaman,Sazid,Ashaduzzaman (Sazid)">
+      <meta name="keywords" content="HTML,HTML-5, PROJECT, SMALL PROJECT, HTML-TEMPLATE, TEMPLATE,Ashaduzzaman,Sazid,Ashaduzzaman (Sazid)">
       <meta name="author" content="Ashaduzzaman Sazid">
       <title>AL-WALI IT INSTITUTE</title>
       <link rel="icon" type="image/x-icon" href="https://saziddeveloper.github.io/MY-FRIST-HTML-TEMPLATE/img/logo.png">
