--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="keywords" content="HTML,HTML-5, PROJECT, SMALL PROJECT, HTML-TEMPLATE, TEMPLATE,Ashaduzzaman,Sazid,Ashaduzzaman (Sazid)">
       <meta name="author" content="Ashaduzzaman Sazid">
       <title>AL-WALI IT INSTITUTE</title>
-      <link rel="icon" type="image/x-icon" href="https://saziddeveloper.github.io/MY-FRIST-HTML-TEMPLATE/img/logo.png">
+      <link rel="icon" type="image/x-icon" href="img/favicon-al-wali-it-logo.png">
    </head>
    <body alink = "#DA19DA" link = "#DA19DA" vlink = "#DA19DA">
       <div style="width:100%">
